--- a/.gitignore
+++ b/.gitignore
@@ -102,7 +102,6 @@ dist
 
 # vuepress v2.x temp and cache directory
 .temp
-.cache
 
 # Serverless directories
 .serverless/
@@ -112,6 +111,9 @@ dist
 
 # DynamoDB Local files
 .dynamodb/
+
+# IDE folder
+.idea
 
 # TernJS port file
 .tern-port
@@ -125,3 +127,6 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# User database
+./cache/user.*.database.json
